# Django_shortener

./: .gitignore  README.md  pyproject.toml  requirements.txt  zsh.exe.stackdump
.github/: pull_request_template.md
config/: settings.py  urls.py
shortener/: admin.py  forms.py  ga.py  middleware.py  model_utils.py  models.py  schemas.py  tests.py  utils.py  views.py
shortener/admins/: views.py
shortener/index/: urls.py  views.py
shortener/migrations/: 0001_initial.py  0002_auto_20230119_2150.py  0002_userdetail.py  0003_delete_userdetail.py  0003_shortenedurls_shortener_s_prefix_bbcd1e_idx.py  0004_auto_20230121_0834.py  0004_users_full_name.py  0005_auto_20230124_1526.py  0005_shortenedurls.py  0006_users_telegram_username.py  0007_schedules.py  0008_backofficelogs.py  0009_dailyvisitors.py  0010_jobinfo.py
shortener/scheduler/: __init__.py  cron.py  utils.py
shortener/templatetags/: custom_tags.py
shortener/urls/: apis.py  decorators.py  serializers.py  telegram_handler.py  urls.py  views.py
shortener/users/: apis.py
templates/: base.html  boards.html  login.html  register.html  statistics.html  url_list.html
