[tool.poetry]
name = "django-shortener"
version = "0.1.0"
description = ""
authors = ["25th-Night <brown_eyed87@naver.com>"]
readme = "README.md"
packages = [{include = "django_shortener"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
