[tool.poetry]
name = "django-shortener"
version = "0.1.0"
description = ""
authors = ["25th-Night <brown_eyed87@naver.com>"]
readme = "README.md"
packages = [{include = "django_shortener"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.13"
typing-extensions = "^4.4.0"
black = "^22.10.0"
click = "^8.1.3"
django-debug-toolbar = "^3.7.0"
django-ninja = "^0.19.1"
djangorestframework = "^3.14.0"
mypy-extensions = "^0.4.3"
pathspec = "^0.10.1"
pydantic = "^1.10.2"
toml = "^0.10.2"
regex = "^2022.9.13"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
